added script and modyfied index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --color-primary: #997e56;
+  --color-primary: #f2d7ab;
   --color-secondary: #472d27;
   --color-white: #fff;
   --color-black: #000;
